# acpx

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: filesystem.rs  filesystem_tests.rs  lib.rs
src/agent_command/: command_probe.rs  spawn_options.rs
src/client/: handlers.rs  handshake.rs  mod.rs  shutdown.rs  spawn.rs  transport.rs
src/runtime/engine/: connected_session.rs  manager_spawn.rs  manager_support.rs
src/runtime/engine/manager/: status.rs
src/runtime/public/contract/: mod.rs  options.rs  types.rs
src/session/: acpx_state.rs  mode_preference.rs
src/terminal/: mod.rs  spawn.rs  tracking.rs
src/util/: command.rs  mod.rs  process.rs  redact.rs
tests/: client_lifecycle.rs  prompt_queue.rs  real_agent_smoke.rs  runtime_lifecycle.rs
